--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.9",
+    "jquery": "^3.3.1",
     "webpack": "^4.6.0"
   },
   "devDependencies": {
