--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   "devDependencies": {
     "babel-loader": "^7.1.4",
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
     "ejs-compiled-loader": "^1.1.0",
     "eventsource-polyfill": "^0.9.6",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.0.2",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.21.0",
     "webpack-cli": "^2.0.15",
     "webpack-dev-middleware": "^3.1.2",
     "webpack-dev-server": "^3.1.3",
