--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "ejs-compiled-loader": "^1.1.0",
+    "ejs-link-less-loader": "0.0.3",
     "eventsource-polyfill": "^0.9.6",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
