把less 从commonjs中抽离出去

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs-compiled-loader": "^1.1.0",
     "ejs-link-less-loader": "0.0.3",
     "eventsource-polyfill": "^0.9.6",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.2",
