--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack-cli": "^2.0.15",
     "webpack-dev-middleware": "^3.1.2",
     "webpack-dev-server": "^3.1.3",
