--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./build/webpack.dev.config.js",
-    "server": "node ./build/server.js"
+    "server": "node ./build/server.js development",
+    "pro": "node ./build/server.js production"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "css-loader": "^0.28.11",
     "ejs-compiled-loader": "^1.1.0",
     "eventsource-polyfill": "^0.9.6",
+    "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
