添加一个新的模块

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.15",
     "webpack-dev-middleware": "^3.1.2",
     "webpack-dev-server": "^3.1.3",
