--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "babel-loader": "^7.1.4",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "ejs-compiled-loader": "^1.1.0",
     "eventsource-polyfill": "^0.9.6",
     "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -30,6 +29,7 @@
     "less-loader": "^4.1.0",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
+    "underscore-template-loader": "^1.0.0",
     "url-loader": "^1.0.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.15",
