--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eventsource-polyfill": "^0.9.6",
     "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.2",
