--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.3",
     "ejs": "^2.5.9",
     "jquery": "^3.3.1",
-    "webpack": "^4.6.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "babel-loader": "^7.1.4",
@@ -34,7 +36,6 @@
     "underscore-template-loader": "^1.0.0",
     "url-loader": "^1.0.1",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.15",
     "webpack-dev-middleware": "^3.1.2",
     "webpack-dev-server": "^3.1.3",
     "webpack-hot-middleware": "^2.22.1",
